# enkripsi-ANCH

./: .gitignore  README.md  mkdocs.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
bindings/js/: anch.js  test.js
docs/: architecture.md  benchmarks.md  examples.md  index.md  installation.md  quickstart.md  research.md  roadmap.md
docs/api/: avalanche.md  collision_test.md  entropy.md  hash.md  hash_file.md  overview.md  verify.md
examples/: demo.py
src/anch/: __init__.py  __main__.py  api.py  benchmark.py  chaos.py  compression.py  core.py  feature.py  neural.py  permutation.py
src/anch_hash.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_modules.py
website/: package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: BenchmarkSection.tsx  ChaosVisualizer.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  InstallSection.tsx  Nav.tsx  ParticlesBackground.tsx  PipelineSection.tsx  PlaygroundSection.tsx  RoadmapSection.tsx
