[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anch-hash"
version = "0.1.0"
description = "ANCH — Adaptive Neural Chaotic Hash Framework: experimental hashing combining feature extraction, neural parameter generation, and chaos theory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "ANCH Framework Team" },
]
keywords = [
    "hashing",
    "cryptography",
    "chaos-theory",
    "experimental",
    "adaptive",
    "neural",
    "fingerprinting",
    "integrity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
benchmark = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://anch-framework.vercel.app"
Repository = "https://github.com/anch-framework/anch"
Documentation = "https://anch-framework.vercel.app/docs"
"Bug Tracker" = "https://github.com/anch-framework/anch/issues"

[project.scripts]
anch = "anch.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["src/anch"]
omit = ["*/tests/*"]
